--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "domain_model"]
 	path = domain_model
 	url = git@github.com:rajathy2020/second_repo.git
+[submodule "domain_model1"]
+	path = domain_model1
+	url = https://github.com/rajathy2020/second_repo.git
